--- a/app/src/main/res/layout/layout_cases.xml
+++ b/app/src/main/res/layout/layout_cases.xml
@@ -125,6 +125,14 @@
             android:layout_alignParentEnd="true"
             android:text="700 (+5)"
             />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/add_home"
+            android:layout_below="@+id/dec_val"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:text="Add to Home Page"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
