--- a/app/src/main/res/layout/activity_slot_availaibility.xml
+++ b/app/src/main/res/layout/activity_slot_availaibility.xml
@@ -192,7 +192,7 @@
                         android:button="@color/white"
                         android:textAlignment="center"
                         android:background="@drawable/radiobuttonvaccine_selector"
-                        android:text="Sputnik-V">
+                        android:text="Sputnik V">
 
                     </RadioButton>
                 </RadioGroup>
