--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
             android:id="@+id/email_address"
             android:drawableEnd="@drawable/ic_baseline_email_24"
             android:hint="Enter your Email Address"
+            android:textColor="#000000"
             android:background="@drawable/round_edittext"
             />
         <TextView
@@ -65,6 +66,7 @@
             android:padding="8dp"
             android:drawableEnd="@drawable/ic_baseline_lock_24"
             android:hint="Enter your Password"
+            android:textColor="#000000"
             android:background="@drawable/round_edittext"
             />
         <CheckBox
